# minutes

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: CONFIG.md  TROUBLESHOOTING.md
docs/plans/: 2026-02-14-cli-summary-v1.md
scripts/: install-models.sh
src/: lib.rs  main.rs
src/audio/: capture.rs  cpal_capture.rs  encoder.rs  mixer.rs  mod.rs  pipewire_capture.rs
src/cli/: args.rs  commands.rs  completions.rs  mod.rs
src/config/: mod.rs  settings.rs
src/daemon/: client.rs  ipc.rs  mod.rs  server.rs  service.rs  state.rs
src/llm/: client.rs  gemini.rs  mod.rs  prompts.rs
src/storage/: database.rs  mod.rs  models.rs  repository.rs
src/transcription/: mod.rs  pipeline.rs  whisper.rs
src/tui/: app.rs  mod.rs
src/tui/screens/: browser.rs  dashboard.rs  mod.rs  viewer.rs
src/tui/widgets/: help.rs  mod.rs
systemd/: minutes.service
tests/: cli_tests.rs  daemon_start_tests.rs  database_tests.rs  doctor_cli_tests.rs  pipewire_reliability_tests.rs  summarize_cli_tests.rs
tests/common/: mod.rs
